tools/manifests/nlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: dev
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: java-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
