tools/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: dev
spec:
  selector:
    app: java-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
